<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#FFFFFF" >
 
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:padding="10dip" >
        <!--  View Title Label -->

          <!--  First Name -->

  
      	<TextView android:id="@+id/register_firstname_error"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:textColor="#e30000"
                    android:padding="10dip"
                    android:textStyle="bold"/>
        <!--  First Name TextField -->

        <EditText
            android:id="@+id/registerName"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/firstname_hint"
            android:inputType="textAutoComplete|textPersonName" />
      
        <!--  Last Name -->
       <TextView android:id="@+id/register_lastname_error"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:textColor="#e30000"
                    android:padding="10dip"
                    android:textStyle="bold"/>
        <!--  Last Name TextField -->

        <EditText
            android:id="@+id/registerLastName"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/lastname_hint"
            android:inputType="textAutoComplete|textPersonName" />
         
        <!--  Email Label -->
        <TextView android:id="@+id/register_email_error"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:textColor="#e30000"
                    android:padding="10dip"
                    android:textStyle="bold"/>
        <!--  Email TextField -->

        <EditText
            android:id="@+id/registerEmail"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email_hint"
            android:inputType="textEmailAddress" />
         
        <!--  Password Label -->
        <TextView android:id="@+id/register_password_error"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:textColor="#e30000"
                    android:padding="10dip"
                    android:textStyle="bold"/>
        <!--  Password TextField -->

        <EditText
            android:id="@+id/registerPassword"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/password_hint"
            android:inputType="textPassword"
            android:password="true" >
  
            <requestFocus />
        </EditText>
         
        <TextView android:id="@+id/register_vpassword_error"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:textColor="#e30000"
                    android:padding="10dip"
                    android:textStyle="bold"/>
        <!--  Password TextField -->
        
        <EditText
            android:id="@+id/registerVerifyPassword"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/verify_password_hint"
            android:inputType="textPassword"
            android:password="true" >
  
            <requestFocus />
        </EditText>
        
        <!--  Error message -->
        <TextView android:id="@+id/register_error"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:textColor="#e30000"
                    android:padding="10dip"
                    android:textStyle="bold"/>
 
        <!--  Login Button -->

        <Button
            android:id="@+id/btnRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dip"
            android:background="#3C88FC"
            android:text="@string/register_button_text"
            android:textColor="#ffffff"
            android:textStyle="bold" />
 
        <!--  Link to Login Screen -->

        <Button
            android:id="@+id/btnLinkToLoginScreen"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dip"
            android:background="@null"
            android:text="@string/login_link_register"
            android:textColor="#21dbd4"
            android:textStyle="bold" />

    </LinearLayout>
 
</ScrollView>